--- a/package.json
+++ b/package.json
@@ -4,10 +4,37 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@nx/eslint": "19.2.1",
+    "@nx/eslint-plugin": "19.2.1",
+    "@nx/jest": "19.2.1",
     "@nx/js": "19.2.1",
+    "@nx/node": "^19.2.1",
+    "@nx/web": "19.2.1",
+    "@nx/webpack": "19.2.1",
     "@nx/workspace": "19.2.1",
-    "nx": "19.2.1"
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/jest": "^29.4.0",
+    "@types/node": "~18.16.9",
+    "@typescript-eslint/eslint-plugin": "^7.3.0",
+    "@typescript-eslint/parser": "^7.3.0",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
+    "nx": "19.2.1",
+    "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.4.2",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "tslib": "^2.3.0"
   }
 }
